test_err.txt
  File "<string>", line 2
    import
          ^
SyntaxError: Expected one or more names after 'import'
